--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,9 +13,4 @@ jobs:
       
     steps:
       - name: Create release
-        run: curl \
-               -X POST \
-               -H "Accept:application/vnd.github+json" \
-               -H "Authorization:token ${{ secrets.GITHUB_TOKEN }}" \
-               https://api.github.com/repos/matthewhunter404/cvital/releases \
-               -d '{"tag_name":"${{ github.ref_name }}","target_commitish":"main","name":"${{ github.ref_name }}","body":"Description of the release","draft":false,"prerelease":false,"generate_release_notes":false}'
+        run: curl -X POST -H "Accept:application/vnd.github+json" -H "Authorization:token ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/matthewhunter404/cvital/releases -d '{"tag_name":"${{ github.ref_name }}","target_commitish":"main","name":"${{ github.ref_name }}","body":"Description of the release","draft":false,"prerelease":false,"generate_release_notes":false}'
