--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,9 +8,24 @@ on:
     tags:    [ "v*" ]
 
 jobs:
-  try-to-create-a-release:
+  release:
+    name: Release
     runs-on: ubuntu-latest
-      
+    permissions:
+      contents: write
+      actions: write
     steps:
+      - name: Build binary
+        working-directory: lambdas
+        run: CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o build/ms-cae.amd64 main.go
       - name: Create release
+        id: create
         run: curl -X POST -H "Accept:application/vnd.github+json" -H "Authorization:token ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/matthewhunter404/cvital/releases -d '{"tag_name":"${{ github.ref_name }}","target_commitish":"main","name":"${{ github.ref_name }}","body":"Description of the release","draft":false,"prerelease":false,"generate_release_notes":false}'
+      - name: Upload Release Asset
+        if: steps.create.outcome == 'success'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          for f in $(find build/ -name 'ms-cae.amd64'); do
+            gh release upload ${{ github.ref_name }} $f
+          done
