--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,8 +15,12 @@ jobs:
       contents: write
       actions: write
     steps:
+      - uses: actions/checkout@v3
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.22'
       - name: Build binary
-        working-directory: .
         run: CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o build/ms-cae.amd64 main.go
       - name: Create release
         id: create
