--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,8 @@ jobs:
         with:
           go-version: '1.22'
       - name: Build binary
-        run: CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o build/ms-cae.amd64 main.go
+        working-directory: server
+        run: CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o ms-cae.amd64 main.go
       - name: Create release
         id: create
         run: curl -X POST -H "Accept:application/vnd.github+json" -H "Authorization:token ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/matthewhunter404/cvital/releases -d '{"tag_name":"${{ github.ref_name }}","target_commitish":"main","name":"${{ github.ref_name }}","body":"Description of the release","draft":false,"prerelease":false,"generate_release_notes":false}'
@@ -30,6 +31,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          for f in $(find build/ -name 'ms-cae.amd64'); do
+          for f in $(find server/ -name 'ms-cae.amd64'); do
             gh release upload ${{ github.ref_name }} $f
           done
