--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,6 +20,8 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: '1.22'
+      - name: Set git fetch depth
+        run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
       - name: Set Environment Variables
         run: echo "TAGMESSAGE=$(git tag -l --format='%(contents:subject)' ${{github.ref_name}})" >> $GITHUB_ENV
       - name: Echo ENV variable
@@ -29,7 +31,7 @@ jobs:
         run: CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o ms-cae.amd64 main.go
       - name: Create release
         id: create
-        run: curl -X POST -H "Accept:application/vnd.github+json" -H "Authorization:token ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/matthewhunter404/cvital/releases -d '{"tag_name":"${{ env.TAGMESSAGE }}","target_commitish":"main","name":"${{ github.ref_name }}","body":"Description of the release","draft":false,"prerelease":false,"generate_release_notes":false}'
+        run: curl -X POST -H "Accept:application/vnd.github+json" -H "Authorization:token ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/matthewhunter404/cvital/releases -d '{"tag_name":"${{ github.ref_name }}","target_commitish":"main","name":"${{ github.ref_name }}","body":"${{ env.TAGNAME }}","draft":false,"prerelease":false,"generate_release_notes":false}'
       - name: Upload Release Asset
         if: steps.create.outcome == 'success'
         env:
