--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,8 +24,10 @@ jobs:
         run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
       - name: Set Environment Variables
         run: echo "TAGMESSAGE=$(git tag -l --format='%(contents:subject)' ${{github.ref_name}})" >> $GITHUB_ENV
-      - name: Echo ENV variable
-        run: echo "The value of TAGMESSAGE is $TAGMESSAGE"
+      - name: Set Environment Variables 2
+        run: echo "TAGVERSION=$(${{ github.ref_name }}//./-)" >> $GITHUB_ENV
+      - name: Echo
+        run: echo "The value of TAGVERSION is $TAGVERSION"        
       - name: Build binary
         working-directory: server
         run: CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o ms-cae.amd64 main.go
