--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
         run: echo "The value of VERSION is $VERSION"        
       - name: Build binary
         working-directory: server
-        run: CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o ms-cae-$VERSION.amd64 main.go
+        run: CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o ms-cae-${{ env.VERSION }}.amd64 main.go
       - name: Create release
         id: create
         run: curl -X POST -H "Accept:application/vnd.github+json" -H "Authorization:token ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/matthewhunter404/cvital/releases -d '{"tag_name":"${{ github.ref_name }}","target_commitish":"main","name":"${{ github.ref_name }}","body":"${{ env.TAGMESSAGE }}","draft":false,"prerelease":false,"generate_release_notes":false}'
@@ -39,6 +39,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          for f in $(find server/ -name 'ms-cae-$VERSION.amd64'); do
+          for f in $(find server/ -name 'ms-cae-${{ env.VERSION }}.amd64'); do
             gh release upload ${{ github.ref_name }} $f
           done
